--- a/style.css
+++ b/style.css
@@ -22,13 +22,14 @@ PC      960px a víc
 header{
 	max-width: 300px;
 	text-align: center;
+	margin: 0 auto;
 }
 .zena{
 	border: 1px solid rgb(197, 197, 197);
 	border-radius: 15px;
 	margin: 15px 0;
 	overflow: hidden;
-	max-width: 300px;
+	max-width: 100%;
 	text-align: center;
 	padding: 10px 15px;
 }
@@ -39,3 +40,57 @@ header{
 
 
 /* TABLET */
+
+@media screen and (min-width: 540px) and (max-width: 960px)
+{ .kontejner{
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 960px;
+	gap: 10px;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+header{
+	flex-basis: 100%;
+	max-width: 960px;
+}
+
+.zena{
+	display: flex;
+	text-align: start;
+	max-width: 400px;
+	gap: 20px;
+	flex: 0 1 45%;
+}
+
+
+}
+
+/* PC */
+
+@media screen and (min-width: 961px)	
+{ .kontejner{
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: center;
+	gap: 10px;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+header{
+	max-width: 100%;
+	flex-basis: 100%;
+	text-align: center;
+}
+
+
+.zena{
+	flex: 1 0 22%;
+	text-align: center;
+	max-width: 100%;
+}
+
+}
